--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
   },
   "repository": "https://github.com/iamjwe/i18n-generator.git",
   "author": "iamjwe",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "npm-run-all": "^4.1.5"
+  },
+  "devDependencies": {
+    "plop": "^2.7.4"
+  }
 }
