--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "iamjwe",
   "license": "MIT",
   "dependencies": {
+    "lodash": "^4.17.20",
     "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
