--- a/templates/i18n.config.json
+++ b/templates/i18n.config.json
@@ -7,12 +7,12 @@
     "markdownPath": "ooo"
   },
   "generator": {
-    "mdPath": "D:/workspace/i18n-g-test/test",
-    "enDir": "D:/workspace/i18n-g-test",
-    "enUSFilePath": "D:/workspace/i18n-g-test/en-US.js",
+    "mdPath": "test",
+    "enDir": ".",
+    "enUSFilePath": "en-US.js",
     "importDirForEnDirRelavtiveToEnUSFile": "./test",
-    "zhDir": "D:/workspace/i18n-g-test",
-    "zhCNFilePath": "D:/workspace/i18n-g-test/zh-CN.js",
+    "zhDir": ".",
+    "zhCNFilePath": "zh-CN.js",
     "importDirForZhDirRelavtiveToZhCNFile": "./test"
   }
 }
