--- a/templates/i18n.config.json
+++ b/templates/i18n.config.json
@@ -1,13 +1,16 @@
 {
   "extra": {
-    "codePath": "src/dir1/ExperimentView.js",
+    "code": {
+      "path": "src/test.js",
+      "suffix": ["/.js$/"]
+    },
     "matchReg": {
-      "languageVariableReg": " /t\\((['\"])[^\\1]*\\1\\)/g",
+      "languageVariableReg": "/t\\((['\"])[^\\1]*\\1\\)/g",
       "languageKeyReg": "/t\\((['\"])([^\\1]*)\\1\\)/",
       "regKeyIndex": "2"
     },
     "markdown": {
-      "filePath": "md3",
+      "path": "md3",
       "columnName": "英语"
     }
   },
