--- a/templates/i18n.config.json
+++ b/templates/i18n.config.json
@@ -9,13 +9,13 @@
       "sentenceReg": "/t\\((['\"])[^\\1]*\\1\\)/g",
       "wordsReg": "/t\\((['\"])([^\\1]*)\\1\\)/",
       "wordsRegIndex": 2,
-      "columnName": "sa"
+      "columnName": "英语"
     },
     {
       "sentenceReg": "/t\\((['\"])[^\\1]*\\1\\)/g",
       "wordsReg": "/t\\((['\"])([^\\1]*)\\1\\)/",
       "wordsRegIndex": 2,
-      "columnName": "mixi"
+      "columnName": "中文"
     }]
   },
   "translate": {
@@ -28,12 +28,24 @@
     }]
   },
   "generator": {
-    "markdownPath": "md",
+    "markdownPath": "md2",
     "resourcePath": "locales",
     "generatorRule": [{
-      "fromColumn": 1,
+      "fromColumn": {
+        "keyColumnNum": 1,
+        "valColumnNum": 1
+      },
       "toResource": {
-        "resourceName": "fsa"
+        "name": "en-US"
+      }
+    },
+    {
+      "fromColumn": {
+        "keyColumnNum": 1,
+        "valColumnNum": 2
+      },
+      "toResource": {
+        "name": "zh-CN"
       }
     }]
   }
