--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
   "author": "iamjwe",
   "license": "MIT",
   "dependencies": {
-    "lodash": "^4.17.20",
-    "npm-run-all": "^4.1.5"
+    "lodash": "^4.17.20"
   },
-  "devDependencies": {
-    "plop": "^2.7.4"
-  }
+  "devDependencies": {}
 }
