--- a/templates/i18n.config.json
+++ b/templates/i18n.config.json
@@ -10,16 +10,17 @@
     },
     "markdownPath": "md",
     "rules": [{
+      "columnName": "英文",
+      "isDistinct":  true,
       "sentenceReg": "/(?<=\\W)t\\([\\s]*(['\"])[^\\1]*?\\1[\\s]*\\)/g",
       "wordsReg": "/t\\((['\"])([^\\1]*?)\\1\\)/",
-      "wordsRegIndex": 2,
-      "columnName": "英文"
+      "wordsRegIndex": 2
     },
     {
+      "columnName": "中文",
       "sentenceReg": "/(?<=\\W)t\\([\\s]*(['\"])[^\\1]*?\\1[\\s]*\\)/g",
       "wordsReg": "/t\\((['\"])([^\\1]*?)\\1\\)/",
-      "wordsRegIndex": 2,
-      "columnName": "中文"
+      "wordsRegIndex": 2
     }]
   },
   "generator": {
